# ppdbscan

./: CMakeLists.txt  cloud.cpp  cloud.h  drawImg.py  func.cpp  func.h  log.md  log.txt  main.cpp  my_tools.cpp  run.sh  test.py
data/: 11-25lsun.csv  11-26lsun.csv  11-26lsun1k.csv  11-26lsun2k.csv  11-26lsun3k.csv  11-26lsun4k.csv  11-26lsun5k.csv  12-01iris.csv  12-02aggre.csv  12-02iris.csv  12-03aggre.csv  12-03lsun.csv  Lsun - 副本.csv  Lsun-1k.csv  Lsun-2k.csv  Lsun-3k.csv  Lsun-4k.csv  Lsun-5k.csv  Lsun.csv  aggregation.csv  iris.csv  lsun100.csv  lsun200.csv  lsun300.csv  lsun400.csv  lsun500.csv  res.csv  s1_old.csv  s1_shuffle.csv
excel/: n_range.csv
install/include/: library_fixed.h
pyFile/: draft.ipynb  drawAna.ipynb  drawImg.py  genData.ipynb  notebook.ipynb  shuffle_data.ipynb  test.py
res/: 02-14-lsun.csv  02-14-s1.csv  03-10-s1.csv  03-13-aggre.csv  03-14-lsun200.csv  03-14-lsun500.csv  03-19-lsun100.csv  03-19-lsun1k.csv  03-19-lsun2k.csv  03-19-lsun300.csv  03-19-lsun3k.csv  03-19-lsun4k.csv  12-03-aggre.csv  12-13-s1.csv  12-16-lsun.csv
src/: CMakeLists.txt  cleartext_library_fixed.cpp  cleartext_library_fixed.h  cleartext_library_fixed_uniform.h  defines.h  defines_uniform.h  functionalities_uniform.h  globals.cpp  globals.h  library_fixed.cpp  library_fixed_common.h  library_fixed_uniform.cpp  library_fixed_uniform.h
src/BuildingBlocks/: CMakeLists.txt  aux-protocols.cpp  aux-protocols.h  truncation.cpp  value-extension.cpp  value-extension.h
src/LinearHE/: CMakeLists.txt  conv-field.cpp  defines-HE.h  elemwise-prod-field.cpp  fc-field.cpp  (+4 more)
(+56 files in other folders)
